objects/REQ_OBJ1__c.object
<CustomObject>
    <fields>
        <fullName>Date_1__c</fullName>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>REQ OBJ1</label>
    <nameField>
        <label>REQ OBJ1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REQ OBJ1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>